test/Fail/TerminationCheckUnquoteDef.err
TerminationCheckUnquoteDef.agda:25.1-26.32: error: [TerminationIssue]
Termination checking failed for the following functions:
Problematic calls:
  TerminationCheckUnquoteDef.aux
